required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN Trunk):
---------------------------

- Fix memeory leak with labepath object (#2199)

- Fix memeory leak msImageTruetypePolyline (#2200)

- SWF: Fix incorrect symbol assignements (#2198)

- Fixed memory leaks in processing of WFS requests (#2077)

- Avoid use of uninitialised memory in msCopySymbol() (#2194)


Version 5.0.0-beta2 (2007-08-01)
--------------------------------

- Oracle Spatial: Fixed some issues related with the maporaclespatial.c 
  source code: warnings with calls in gcc 4.x versions (#1845), gtype 
  translation error, generating memory problem (#2056), problems with items
  allocation (#1961 and #1736), and some memory-leaks errors (#1662). 

- AGG: Fixed a significant number of rendering issues including conflicts with
  OPACITY ALPHA and ANTIALIAS TRUE settings w/regards to polygon fills. Fixed
  ellipse and vector markers. Fixed AGG/GD alpha channel conflicts by writing
  conversion to/from functions. (#2191-partial, #2173, #2177)

- SOS: Turn layer off if eventTime is not in the sos_offering_timeextent
  (#2154)

- WFS: Correct bugs related to query by featureid support (#2102)

- WMS: Add svg as a supported format for GetMap request (#1347)

- WMS: Correct WMS time overriding Filter paramter (#1261)

- Fix problem with LUT scaling ranges with explicit value for 255 (#2167).

- WCS: Fixed resampling/reprojecting for tileindex datasets (#2180)

- Fixed formatting of configure --help (#2182)
 
- Fixed AGG configure option to use 'test -f' instead of 'test -e' which
  doesn't work on Solaris (#2183)

- Fixed mapwms.c to support selecting AGG/ outputformats via FORMAT=.
